<resources>
    <string name="app_name">Práctica_5</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="ghost">BAHAHAH</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_world">hello</string>
    <string name="acerca_de">Aplicacion creada para el curso programación de dispositivos móviles de la Universidad de Antioquia - Estudiante: Gabriel Cerón Viveros, contacto: correofalso@gmail.coms</string>
    <string name="action_settings">Settings</string>

    <string name="turismo_iglesia_asuncion">1)Iglesia de Nuestra Señora de la Asunción, de estilo Romano; fue rediseñado por Carlos Carre el mismo que diseño la Catedral de Medellín.</string>
    <string name="tursimo_Museo">2)Museo del Cristo, con una colección de 2700 crucifijos donados por el maestro Roberto Hoyos Castaño.</string>
    <string name="turismo_cuchilla">3)La cuchilla Los Cedros, desde donde se puede divisar buena parte del oriente cercano de Antioquia.</string>

    <string name="hotel_1">1)Contamos con 24 habitaciones totalmente equipadas para lograr el confort que usted se merece, ofrecemos servicio de parqueadero gratis, sauna, turco, WI-FI, ascensor, con acceso para discapacitados y con salón de convenciones con capacidad para 100 personas.</string>
    <string name="hotel_2">2)Estamos ubicados en el centro del Oriente Antioqueño,en el Municipio de Marinilla, a tan solo una cuadra de parque principal.Contamos con habitaciones tipo suite, con jacczi, TV Plasma 42 ", mini-bar, con la mayor privacidad y el mejor servicion y atención.</string>
    <string name="hotel_3">3)Hotel y Restaurante Terramonte. Ofrecemos Confortables Habitaciones y Deliciosos Platos A La Carta. Contamos Con Las Más Modernas y Cómodas Instalaciones Hoteleras Que Permitirán El Confort y Tranquilidad De Los Mejores Hoteles De Hoy.</string>

    <string name="bar1">1)El sitio que Marinilla esperaba... el lugar para tus reuniones familiares, eventos sociales y excelente rumba el fin de semana con artistas en vivo.</string>
    <string name="bar2">2)Empieza la noche con un poco de comedia y termina con buena música en vivo. Los esperamos en este espacio, perfecto para reunirse con los amigos y la familia para pasar un rato agradable y disfrutar de la comedia y música.</string>
    <string name="bar3">3)En este espacio se rescatan los ritmos afroantillanos como el son cubano, la rumba, el guaguancó, el latin jazz, etc. y que son conocidos como salsa.</string>

    <string name="propaganda">Marinilla, Antioquia</string>

    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="title_activity_hoteles">Hoteles</string>
    <string name="title_activity_bares">Bares</string>
    <string name="title_activity_turismo">Turismo</string>
    <string name="title_activity_demografia">Demografia</string>
</resources>
