<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainMarinilla">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/action_acerca" android:title="@string/title_activity_acerca_de"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/action_hoteles" android:title="@string/title_activity_hoteles"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/action_bares" android:title="@string/title_activity_bares"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/action_turismo" android:title="@string/title_activity_turismo"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/action_demografia" android:title="@string/title_activity_demografia"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
