<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gabrielceron.marinilla.Turismo">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView android:text="@string/hotel_1" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hotel1"
            android:contentDescription="@string/hello_world"/>

        <TextView android:text="@string/hotel_2" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hotel2"
            android:contentDescription="@string/hello_world"/>


        <TextView android:text="@string/hotel_3" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hotel3"
            android:contentDescription="@string/hello_world"/>

    </LinearLayout>
</ScrollView>
